# OperatingSystems2025

./: README.md
Docker/: Dockerfile  Go.Dockerfile
FirstPartComplete/: Makefile  WebSocket Multiplayer Demo.pck  WebSocket_Multiplayer_Demo.pck  WebSocket_Multiplayer_Demo.sh  godot.base.Dockerfile  godot.complete.Dockerfile  ubuntu.test.Dockerfile
SecondPartIncomplete/: godot.incomplete.Dockerfile
SystemProgramming/BasicSystemCalls/FifthWeek/: more_system_call.asm  system_call.asm
SystemProgramming/BasicSystemCalls/FirstWeek/: a.out
SystemProgramming/BasicSystemCalls/FourthWeek/: Calling_a_thread.cpp  More_concurrency.cpp  Sync_IO.cpp  a.out  hello_concurrency.cpp  output.txt
SystemProgramming/BasicSystemCalls/JoinExecWait/: Makefile  basicFork
SystemProgramming/BasicSystemCalls/PrimeraSemana/: test.c
SystemProgramming/BasicSystemCalls/SecondWeek/: OS_principles.c  ejemplo1  ejemplo2  ejemplo3  os_examples
SystemProgramming/BasicSystemCalls/ThirdWeek/: command_examples.sh  requirements.txt
SystemProgramming/GoApiPostgres/: docker-compose.yml
SystemProgramming/MultithreadingServer/: go.mod
Test2/TypeA/: CMakeLists.txt  main.cpp
Test2/TypeB/: main.py
Test2/TypeC/: TypeC.Dockerfile  main.cs
Test2/TypeC/CsharpServer/: Program.cs
Test2/TypeD/: Cargo.toml  TypeD.Dockerfile
TestingTools/AccessPointTest.ino/: AccessPointTest.ino.ino
WebScrapingAsync/: Makefile  docker-compose.yml  pyproject.toml
WebScrapingAsync/ollama_stuff/: ollama.Dockerfile  start_ollama.sh
WebScrapingAsync/src/: main.py  model.py  real_page.py  real_scrapper.py
(+17 files in other folders)
